autentifikacija servis i izmena lozinke

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "gEnEr4T0rJW70k#~aZ4Au73Nt|f|K4C|jU"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
