--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "neo4j": "http://localhost:7474/"},
+    "neo4j": "http://localhost:7474/",
+    "redis": "localhost:6379"
+  },
   "NeoKlijent": {
     "korisnik": "neo4j",
     "lozinka": "nurturenet"
